--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resume-creator",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
@@ -22,6 +22,7 @@
     "@nrwl/jest": "13.7.1",
     "@nrwl/linter": "13.7.1",
     "@nrwl/react": "13.7.1",
+    "@nrwl/node": "13.7.1",
     "@nrwl/tao": "13.7.1",
     "@nrwl/web": "13.7.1",
     "@nrwl/workspace": "13.7.1",
@@ -43,6 +44,8 @@
     "eslint-plugin-react": "7.27.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.2.3",
+    "jspdf": "2.5.1",
+    "puppeteer": "13.1.2",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
