--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
+    "cors": "2.8.5",
+    "downloadjs": "1.4.7",
+    "express": "4.17.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
@@ -19,15 +22,18 @@
     "@nrwl/cli": "13.7.1",
     "@nrwl/cypress": "13.7.1",
     "@nrwl/eslint-plugin-nx": "13.7.1",
+    "@nrwl/express": "^13.7.1",
     "@nrwl/jest": "13.7.1",
     "@nrwl/linter": "13.7.1",
-    "@nrwl/react": "13.7.1",
     "@nrwl/node": "13.7.1",
+    "@nrwl/react": "13.7.1",
     "@nrwl/tao": "13.7.1",
     "@nrwl/web": "13.7.1",
     "@nrwl/workspace": "13.7.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
+    "@types/downloadjs": "^1.4.3",
+    "@types/express": "4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.30",
@@ -44,9 +50,8 @@
     "eslint-plugin-react": "7.27.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.2.3",
-    "jspdf": "2.5.1",
-    "puppeteer": "13.1.2",
     "prettier": "^2.5.1",
+    "puppeteer": "13.1.2",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
