--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,5 @@ testem.log
 Thumbs.db
 
 # Custom data
-apps/template/src/assets/data.json
+apps/template/src/assets/data*.json
+!apps/template/src/assets/data.example.json
