--- a/apps/template/tsconfig.app.json
+++ b/apps/template/tsconfig.app.json
@@ -3,10 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "types": ["node"],
-    "resolveJsonModule": true,
-    "paths": {
-      "@assets/*": ["./src/assets/*"],
-    }
+    "resolveJsonModule": true
   },
   "files": [
     "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
