--- a/apps/template/tsconfig.app.json
+++ b/apps/template/tsconfig.app.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "types": ["node"],
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "allowJs": true
   },
   "files": [
     "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
