--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "downloadjs": "1.4.7",
     "express": "4.17.2",
     "react": "17.0.2",
-    "rxjs": "7.5.4",
+    "react-color": "^2.19.3",
     "react-dom": "17.0.2",
     "react-router-dom": "6.2.1",
     "regenerator-runtime": "0.13.7",
+    "rxjs": "7.5.4",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
